--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -207,4 +207,4 @@ jobs:
             password $GIGALIXIR_TOKEN
           EOF >> ~/.netrc
       - name: Deploy
-        run: git push gigalixir release:master
+        run: git push -f gigalixir HEAD:refs/heads/master
