--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,174 +10,202 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup elixir
-      uses: actions/setup-elixir@v1
-      with:
-        elixir-version: 1.10.2
-        otp-version: 22.2
-    - name: Cache dependencies directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-deps-directory
-      with:
-        path: deps
-        key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-          ${{ runner.os }}-deps-${{ env.cache-name }}-
-          ${{ runner.os }}-deps-
-    - name: Install Dependencies
-      run: mix deps.get
-    - name: Cache build directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-build-directory
-      with:
-        path: _build
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}
-          ${{ runner.os }}-build-
-    - name: Compile
-      run: mix compile
+      - uses: actions/checkout@v2
+      - name: Setup elixir
+        uses: actions/setup-elixir@v1
+        with:
+          elixir-version: 1.10.2
+          otp-version: 22.2
+      - name: Cache dependencies directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-deps-directory
+        with:
+          path: deps
+          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+            ${{ runner.os }}-deps-${{ env.cache-name }}-
+            ${{ runner.os }}-deps-
+      - name: Install Dependencies
+        run: mix deps.get
+      - name: Cache build directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-build-directory
+        with:
+          path: _build
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}
+            ${{ runner.os }}-build-
+      - name: Compile
+        run: mix compile
   lint:
-    runs-on: ubuntu-latest
     needs: build
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup elixir
-      uses: actions/setup-elixir@v1
-      with:
-        elixir-version: 1.10.2
-        otp-version: 22.2
-    - name: Cache dependencies directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-deps-directory
-      with:
-        path: deps
-        key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-          ${{ runner.os }}-deps-${{ env.cache-name }}-
-          ${{ runner.os }}-deps-
-    - name: Install Dependencies
-      run: mix deps.get
-    - name: Cache build directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-build-directory
-      with:
-        path: _build
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}
-          ${{ runner.os }}-build-
-    - name: Check Format
-      run: mix format --check-formatted
+      - uses: actions/checkout@v2
+      - name: Setup elixir
+        uses: actions/setup-elixir@v1
+        with:
+          elixir-version: 1.10.2
+          otp-version: 22.2
+      - name: Cache dependencies directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-deps-directory
+        with:
+          path: deps
+          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+            ${{ runner.os }}-deps-${{ env.cache-name }}-
+            ${{ runner.os }}-deps-
+      - name: Install Dependencies
+        run: mix deps.get
+      - name: Cache build directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-build-directory
+        with:
+          path: _build
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}
+            ${{ runner.os }}-build-
+      - name: Check Format
+        run: mix format --check-formatted
   credo:
-    runs-on: ubuntu-latest
     needs: build
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup elixir
-      uses: actions/setup-elixir@v1
-      with:
-        elixir-version: 1.10.2
-        otp-version: 22.2
-    - name: Cache dependencies directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-deps-directory
-      with:
-        path: deps
-        key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-          ${{ runner.os }}-deps-${{ env.cache-name }}-
-          ${{ runner.os }}-deps-
-    - name: Install Dependencies
-      run: mix deps.get
-    - name: Cache build directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-build-directory
-      with:
-        path: _build
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}
-          ${{ runner.os }}-build-
-    - name: Check Style
-      run: mix credo --strict
+      - uses: actions/checkout@v2
+      - name: Setup elixir
+        uses: actions/setup-elixir@v1
+        with:
+          elixir-version: 1.10.2
+          otp-version: 22.2
+      - name: Cache dependencies directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-deps-directory
+        with:
+          path: deps
+          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+            ${{ runner.os }}-deps-${{ env.cache-name }}-
+            ${{ runner.os }}-deps-
+      - name: Install Dependencies
+        run: mix deps.get
+      - name: Cache build directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-build-directory
+        with:
+          path: _build
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}
+            ${{ runner.os }}-build-
+      - name: Check Style
+        run: mix credo --strict
   test:
-    runs-on: ubuntu-latest
     needs: build
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup elixir
-      uses: actions/setup-elixir@v1
-      with:
-        elixir-version: 1.10.2
-        otp-version: 22.2
-    - name: Cache dependencies directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-deps-directory
-      with:
-        path: deps
-        key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-          ${{ runner.os }}-deps-${{ env.cache-name }}-
-          ${{ runner.os }}-deps-
-    - name: Install Dependencies
-      run: mix deps.get
-    - name: Cache build directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-build-directory
-      with:
-        path: _build
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}
-          ${{ runner.os }}-build-
-    - name: Run Tests
-      run: mix test
-  type_check:
     runs-on: ubuntu-latest
-    needs: [lint, credo, test]
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup elixir
-      uses: actions/setup-elixir@v1
-      with:
-        elixir-version: 1.10.2
-        otp-version: 22.2
-    - name: Cache dependencies directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-deps-directory
-      with:
-        path: deps
-        key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-          ${{ runner.os }}-deps-${{ env.cache-name }}-
-          ${{ runner.os }}-deps-
-    - name: Install Dependencies
-      run: mix deps.get
-    - name: Cache dialyzer directory
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-dialyzer-directory
-      with:
-        path: _build
-        key: ${{ runner.os }}-dialyzer-${{ env.cache-name }}
-        restore-keys: |
-          ${{ runner.os }}-dialyzer-${{ env.cache-name }}
-          ${{ runner.os }}-dialyzer-
-    - name: Check Types
-      run: mix dialyzer --halt-exit-status
+      - uses: actions/checkout@v2
+      - name: Setup elixir
+        uses: actions/setup-elixir@v1
+        with:
+          elixir-version: 1.10.2
+          otp-version: 22.2
+      - name: Cache dependencies directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-deps-directory
+        with:
+          path: deps
+          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+            ${{ runner.os }}-deps-${{ env.cache-name }}-
+            ${{ runner.os }}-deps-
+      - name: Install Dependencies
+        run: mix deps.get
+      - name: Cache build directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-build-directory
+        with:
+          path: _build
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}
+            ${{ runner.os }}-build-
+      - name: Run Tests
+        run: mix test
+  type_check:
+    needs: [lint, credo, test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup elixir
+        uses: actions/setup-elixir@v1
+        with:
+          elixir-version: 1.10.2
+          otp-version: 22.2
+      - name: Cache dependencies directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-deps-directory
+        with:
+          path: deps
+          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+            ${{ runner.os }}-deps-${{ env.cache-name }}-
+            ${{ runner.os }}-deps-
+      - name: Install Dependencies
+        run: mix deps.get
+      - name: Cache dialyzer directory
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-dialyzer-directory
+        with:
+          path: _build
+          key: ${{ runner.os }}-dialyzer-${{ env.cache-name }}
+          restore-keys: |
+            ${{ runner.os }}-dialyzer-${{ env.cache-name }}
+            ${{ runner.os }}-dialyzer-
+      - name: Check Types
+        run: mix dialyzer --halt-exit-status
+  deploy:
+    needs: type_check
+    if: ${{ github.ref == 'refs/heads/master' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Gigalixir CLI
+        run: |
+          sudo pip install gigalixir --ignore-installed six
+          echo 'export PATH=~/.local/bin:$PATH' >> ~/.bash_profile
+          source ~/.bash_profile
+          git remote add gigalixir https://git.gigalixir.com/monumental-busy-volvox.git
+      - name: Setup Gigalixir
+        env:
+          GIGALIXIR_USER: ${{ secrets.GIGALIXIR_USER }}
+          GIGALIXIR_TOKEN: ${{ secrets.GIGALIXIR_TOKEN }}
+        run: |
+          cat >> ~/.netrc <<EOF
+          machine api.gigalixir.com
+            login $GIGALIXIR_USER
+            password $GIGALIXIR_TOKEN
+          machine git.gigalixir.com
+            login $GIGALIXIR_USER
+            password $GIGALIXIR_TOKEN
+          EOF
+      - name: Deploy
+        run: |
+          git push -f gigalixir master
