Unshallow before push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -209,4 +209,5 @@ jobs:
           EOF
       - name: Deploy
         run: |
-          git push -f gigalixir master
+          git fetch --unshallow origin
+          git push gigalixir master
