Add missing env var for test env

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,7 @@ jobs:
     env:
       GOOGLE_CLIENT_ID: 123
       GOOGLE_CLIENT_SECRET: 456
+      GUARDIAN_SECRET_KEY: 789
     steps:
       - uses: actions/checkout@v2
       - name: Setup elixir
