--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,175 +18,32 @@ jobs:
           otp-version: 22.2
       - name: Cache dependencies directory
         uses: actions/cache@v1
-        env:
-          cache-name: cache-deps-directory
         with:
           path: deps
-          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
+          key: ${{ runner.os }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
           restore-keys: |
-            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-            ${{ runner.os }}-deps-${{ env.cache-name }}-
-            ${{ runner.os }}-deps-
+            ${{ runner.os }}-mix-
       - name: Install Dependencies
         run: mix deps.get
       - name: Cache build directory
         uses: actions/cache@v1
-        env:
-          cache-name: cache-build-directory
         with:
           path: _build
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
+          key: ${{ runner.os }}-build-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
           restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}
             ${{ runner.os }}-build-
       - name: Compile
         run: mix compile
-  lint:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup elixir
-        uses: actions/setup-elixir@v1
-        with:
-          elixir-version: 1.10.2
-          otp-version: 22.2
-      - name: Cache dependencies directory
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-deps-directory
-        with:
-          path: deps
-          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-            ${{ runner.os }}-deps-${{ env.cache-name }}-
-            ${{ runner.os }}-deps-
-      - name: Install Dependencies
-        run: mix deps.get
-      - name: Cache build directory
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-build-directory
-        with:
-          path: _build
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}
-            ${{ runner.os }}-build-
       - name: Check Format
         run: mix format --check-formatted
-  credo:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup elixir
-        uses: actions/setup-elixir@v1
-        with:
-          elixir-version: 1.10.2
-          otp-version: 22.2
-      - name: Cache dependencies directory
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-deps-directory
-        with:
-          path: deps
-          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-            ${{ runner.os }}-deps-${{ env.cache-name }}-
-            ${{ runner.os }}-deps-
-      - name: Install Dependencies
-        run: mix deps.get
-      - name: Cache build directory
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-build-directory
-        with:
-          path: _build
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}
-            ${{ runner.os }}-build-
       - name: Check Style
         run: mix credo --strict
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    env:
-      GOOGLE_CLIENT_ID: 123
-      GOOGLE_CLIENT_SECRET: 456
-      GUARDIAN_SECRET_KEY: 789
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup elixir
-        uses: actions/setup-elixir@v1
-        with:
-          elixir-version: 1.10.2
-          otp-version: 22.2
-      - name: Cache dependencies directory
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-deps-directory
-        with:
-          path: deps
-          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-            ${{ runner.os }}-deps-${{ env.cache-name }}-
-            ${{ runner.os }}-deps-
-      - name: Install Dependencies
-        run: mix deps.get
-      - name: Cache build directory
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-build-directory
-        with:
-          path: _build
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}
-            ${{ runner.os }}-build-
       - name: Run Tests
         run: mix test
-  type_check:
-    needs: [lint, credo, test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup elixir
-        uses: actions/setup-elixir@v1
-        with:
-          elixir-version: 1.10.2
-          otp-version: 22.2
-      - name: Cache dependencies directory
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-deps-directory
-        with:
-          path: deps
-          key: ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-deps-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
-            ${{ runner.os }}-deps-${{ env.cache-name }}-
-            ${{ runner.os }}-deps-
-      - name: Install Dependencies
-        run: mix deps.get
-      - name: Cache dialyzer directory
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-dialyzer-directory
-        with:
-          path: _build
-          key: ${{ runner.os }}-dialyzer-${{ env.cache-name }}
-          restore-keys: |
-            ${{ runner.os }}-dialyzer-${{ env.cache-name }}
-            ${{ runner.os }}-dialyzer-
       - name: Check Types
         run: mix dialyzer --halt-exit-status
   deploy:
-    needs: type_check
+    needs: tests
     if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     steps:
