Restore bogus env vars

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    env:
+      GOOGLE_CLIENT_ID: 123
+      GOOGLE_CLIENT_SECRET: 456
+      GUARDIAN_SECRET_KEY: 789
     steps:
       - uses: actions/checkout@v2
       - name: Setup elixir
